<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPlayer1Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayer1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_player_1_name"
            android:text="John Doe" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPlayer1Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayer2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_player_2_name"
            android:text="Alice Bob" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/btn_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
