...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlayerOneName"
        tools:text="10" />

    <ImageView
        android:id="@+id/ivPlayerOneAddScore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackground"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tvPlayerOneScore"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintBottom_toTopOf="@id/tvPlayerTwoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="10" />

    <ImageView
        android:id="@+id/ivPlayerTwoAddScore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackground"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@id/tvPlayerTwoScore"
        app:layout_constraintStart_toStartOf="parent"
...
